# metadata-tutorial

./: .gitignore  ContainerConfig.yaml  Dockerfile  LICENSE.md  README.md  gulpfile.js  package.json  pyproject.toml
.github/workflows/: build.yml  deployment.yml
content/: _config.yml  _toc.yml  index.rst
content/access_data/: europeana.rst  index.rst  interface.rst  local_data.rst  writing.rst
content/access_data/oai_pmh/: index.rst  records.rst  sets.rst
content/analyse_visualise_data/: index.rst
content/analyse_visualise_data/analysis/: descriptive_statistics.rst  further_filtering.rst  index.rst
content/analyse_visualise_data/visualisation/: index.rst
content/filter_transform_data/: index.rst
content/filter_transform_data/filter/: basic_filters.rst  compound_filters.rst  index.rst
content/filter_transform_data/transform/: complex_transforms.rst  index.rst
content/next/: index.rst
ou-builder-build/: content_config.yaml  jupyter_notebook_config.py  ou_core_config.json  start-notebook.sh  tutorial-server.ini
ou-builder-build/content/: content_config.yaml
ou-builder-build/startup/: home-dir.sudoers  start.sh
source/: conf.py  index.rst
source/access_data/: europeana.rst  index.rst  interface.rst  introduction.rst  local_data.rst  writing.rst
source/access_data/oai_pmh/: formats.rst  index.rst  records.rst  sets.rst
source/analyse_visualise_data/: index.rst
source/filter_transform_data/: index.rst
source/next/: index.rst
source/transform_data/: index.rst
source/visualisation/: index.rst
(+17 files in other folders)
